tests/gabc-dump/should-fail/unclosed-slur-2.gabc
name: unclosed slur (2);
%%
(c4) f(f[uslur:2{]) g(g[uslur:1{]) (::)
